fixing bug that made mouseover area too large

--- a/src/components/recentSearches.css
+++ b/src/components/recentSearches.css
@@ -57,6 +57,10 @@
   grid-template-columns: 1fr;
 } */
 
+.dropbtn{
+  z-index: 10;
+}
+
 .dropbtn:hover + .dropdown-content {
   display: grid;
   grid-template-columns: 1fr;
